# PrepareDecoding

./: .bettercodehub.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  PyPI_README.md  README.md  RELEASE_NOTES.md  setup.py  vcpkg.json
.github/workflows/: coverage.yml  macos-unit.yml  python-wheels.yml  regression.yml  sanitisers.yml  static-analysis.yml  ubuntu-unit.yml  unit-macos.yml  unit-ubuntu.yml  unit-windows.yml  wheels.yml  windows-unit.yml
cmake/: AsmcPrepareDecodingConfig.cmake  CompilerWarnings.cmake  FindMPFR.cmake  ProjectSettings.cmake  Sanitisers.cmake  StaticAnalysers.cmake
docs/: api.md  file_formats.md
exe/: CMakeLists.txt  prepare_decoding.cpp
notebooks/: CreateDecodingQuantitiesFromPrecomputedCSFS.ipynb  CreateDecodingQuantitiesFromScratch.ipynb  CreatingDecodingQuantities.ipynb  PrepareDecoding.ipynb
notebooks/.ipynb_checkpoints/: CreateDecodingQuantitiesFromPrecomputedCSFS-checkpoint.ipynb  CreateDecodingQuantitiesFromScratch-checkpoint.ipynb
scripts/: compare_decoding_quantities.py  install_dependencies.bat  install_dependencies.sh  vcpkg_dependencies
src/: ArraySpectrum.cpp  ArraySpectrum.hpp  CMakeLists.txt  Csfs.cpp  Csfs.hpp  CsfsEntry.cpp  CsfsEntry.hpp  Data.cpp  Data.hpp  DecodingQuantities.cpp  DecodingQuantities.hpp  DefaultDemographies.cpp  DefaultDemographies.hpp  EigenTypes.hpp  Makefile  PrepareDecoding.cpp  PrepareDecoding.hpp  ThinParameterTypes.hpp  Transition.cpp  Transition.hpp  Utils.cpp  Utils.hpp  __init__.py  decoding_quantities.py  library.cpp  library.h  library.hpp  pybind.cpp
test/: CMakeLists.txt  TestCsfs.cpp  TestCsfsEntry.cpp  TestData.cpp  TestDefaultDemographies.cpp  TestPrepareDecoding.cpp  TestThinParameterTypes.cpp  TestUtils.cpp  catch_main.cpp  tests.cpp
test/data/: example.frq  test.demo  test.disc
test/regression/: test_file_contents.py  test_prepare.py  test_prepare.sh  test_prepare_python.sh
utils/: generate_dq_for_asmc.py
